# ZEN-europe

./: .gitignore  CHANGELOG.md  pyproject.toml
.github/workflows/: run_tests.yml
data/: config.yaml
tests/end_to_end/: test_runner_and_cli.py
zen_europe/: model_creator.py
zen_europe/datasets/datasets/: __init__.py
zen_europe/datasets/datasets/carriers/biomass/: enspreso.py
zen_europe/datasets/datasets/energy_system/: nuts_shp.py  tyndp_edges.py
zen_europe/elements/carriers/: __init__.py  biomass.py  wet_biomass.py
